# pysofi

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  data.py  env_MacOS_Majave.yml  env_Win10.yml  env_linux.yml  pysofi.yml  setup.cfg  setup.py
Notebooks/: CalcMoments.ipynb  CuspArtifactsDemo1_3Emitters-Demo-save-and-object.ipynb  CuspArtifactsDemo1_3Emitters.ipynb  CuspArtifactsDemo2_SlowVaryingRho.ipynb  DataClass.ipynb  DataClassTests.ipynb  E10_ReconstructionConvergence_SampleAnalysis.ipynb  E10_ResultVisualization.ipynb  E11_CuspArtifactsDemo1_3Emitters.ipynb  E12_CuspArtifactsDemo1_3Emitters.ipynb  E12_CuspArtifactsDemo2_SlowVaryingRho.ipynb  E13_CuspArtifactsDemo2_SlowVaryingRho.ipynb  E2_NoiseFiltration.ipynb  E3_ShrinkingKernelDeconvolution.ipynb  E5_FourierInterpolation.ipynb  E6_BleachingCorrection.ipynb  E7_MOCA.ipynb  E8_ReconstructionConvergence.ipynb  E8_ReconstructionConvergence_SampleAnalysis.ipynb  E8_ResultVisualization.ipynb  E9_ReconstructionConvergence.ipynb  E9_ReconstructionConvergence_SampleAnalysis.ipynb  ExampleAnalysis1_BleachingCorrection.ipynb  ExampleAnalysis3_ReconstructionConvergence_SampleAnalysis.ipynb  ExampleAnalysis4_ResultVisualization.ipynb  ExampleModule2_NoiseFiltration.ipynb  ExampleModule3_ShrinkingKernelDeconvolution.ipynb  ExampleModule5_FourierInterpolation.ipynb  ExampleModule6_MOCA.ipynb  Example_CuspArtifactsDem1o_3Emitters.ipynb  Example_CuspArtifactsDemo1_3Emitters.ipynb  Example_CuspArtifactsDemo2_SlowVaryingRho.ipynb  Example_MOCA_Demo.ipynb  Example_ReconstructionConvergence.ipynb  (+5 more)
(+72 files in other folders)
