[metadata]
name = pysofi
url = https://xiyuyi-at-llnl.github.io/pysofi/build/html/
download_url = https://github.com/xiyuyi-at-LLNL/pysofi
license = MIT
license_file = LICENSE
description = Python package for SOFI
long_description = file: README.md
long_description_content_type = text/markdown
author = Yuting Miao, Xiyu Yi
author_email = ytmiao@ucla.edu
classifiers =
    Development Status :: 0 - Alpha
    Intended Audience :: Science/Research
    Programming Language :: Python
    Topic :: Scientific/Engineering
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS


description-file = README.md